# controller/menu.go
@@ -11,6 +11,32 @@ var Menu menu
 
 type menu struct{}
 
+// GetMenuListAll 获取所有的菜单列表
+// @Summary 获取所有的菜单列表
+// @Description 菜单关接口
+// @Tags 菜单管理
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Success 200 {string} json "{"code": 0, "data": []}"
+// @Router /api/v1/menu/list [get]
+func (u *menu) GetMenuListAll(c *gin.Context) {
+
+	data, err := service.Menu.GetMenuListAll()
+
+	if err != nil {
+		logger.Error("ERROR：" + err.Error())
+		c.JSON(http.StatusOK, gin.H{
+			"code": 90500,
+			"msg":  err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{
+		"code": 0,
+		"data": data,
+	})
+}
+
 // GetMenuList 获取菜单列表
 // @Summary 获取菜单列表
 // @Description 菜单关接口
